CSS_module2_solution/css/module2style.css
/****** This is my CSS stylesheet for the Module 2 Coding Assignment. ******/

/********** Base styles **********/
* {
  box-sizing: border-box;
}
h1
 {
  margin-bottom: 25px;
  text-align: center;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 1.75em;
}

html { font-size: 16px; }

p
{
  border: 1px solid black;
  background-color: #3d7abb;
  width: 90%;
  height: 100%;
  margin-right: auto;
  margin-left: auto;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 1em;
  color: white;
}

.sectionTitleBox_chicken {
  position: absolute;
  width: 150px;
  height: 30px;
  margin-top: 0%;
  margin-bottom: 40px;
  right: 0%;
  top: 0;
  border: 1px solid black;
  background-color: #e89b0d;
  text-align: center;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 1.25em;
}

.sectionTitleBox_beef {
  position: absolute;
  width: 150px;
  height: 30px;
  margin-top: 0%;
  margin-bottom: 40px;
  right: 0%;
  top: 0;
  border: 1px solid black;
  background-color: #ef325e;
  text-align: center;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 20px;
}

.sectionTitleBox_sushi {
  position: absolute;
  width: 150px;
  height: 30px;
  margin-top: 0%;
  margin-bottom: 40px;
  right: 0%;
  top: 0;
  border: 1px solid black;
  background-color: #e8ebef;
  text-align: center;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 20px;
}

.sectionTitle {
  text-align: center;
}

.sectionParagraph {
  margin-top: 40px;
}

/* Simple Responsive Framework. */
.row {
  width: 100%;
}

/********** Desktop View **********/
@media (min-width: 992px) {
  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, 
  .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
    position: relative;
        float: left;
        border: 1px solid black;
        background-color: gray;
        height: 300px;
        overflow: hidden;
        margin-right: 1%;
        margin-top: 1%;
  }
  .col-lg-1 {
    width: 8.33%;
  }
  .col-lg-2 {
    width: 16.66%;
  }
  .col-lg-3 {
    width: 25%;
  }
  .col-lg-4 {
    width: 32%;
  }
  .col-lg-5 {
    width: 41.66%;
  }
  .col-lg-6 {
    width: 50%;
  }
  .col-lg-7 {
    width: 58.33%;
  }
  .col-lg-8 {
    width: 66.66%;
  }
  .col-lg-9 {
    width: 74.99%;
  }
  .col-lg-10 {
    width: 83.33%;
  }
  .col-lg-11 {
    width: 91.66%;
  }
  .col-lg-12 {
    width: 100%;
  }
}

/********** Tablet View **********/
@media (min-width: 768px) and (max-width: 991px) {
  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, 
  .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
    position: relative;
        float: left;
        border: 1px solid black;
        background-color: gray;
        height: 300px;
        overflow: hidden;
        margin-right: 1%;
        margin-top: 1%;
  }
  .col-md-1 {
    width: 8.33%;
  }
  .col-md-2 {
    width: 16.66%;
  }
  .col-md-3 {
    width: 25%;
  }
  .col-md-4 {
    width: 33.33%;
  }
  .col-md-5 {
    width: 41.66%;
  }
  .col-md-6 {
    width: 49%;
  }
  .col-md-7 {
    width: 58.33%;
  }
  .col-md-8 {
    width: 66.66%;
  }
  .col-md-9 {
    width: 74.99%;
  }
  .col-md-10 {
    width: 83.33%;
  }
  .col-md-11 {
    width: 91.66%;
  }
  .col-md-12 {
    width: 100%;
  }
}

/********** Mobile View **********/
@media (max-width: 767px) {
  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, 
  .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
    position: relative;
        float: left;
        border: 1px solid black;
        background-color: gray;
        height: 300px;
        overflow: hidden;
        margin-right: 1%;
        margin-top: 1%;
  }
  .col-sm-1 {
    width: 8.33%;
  }
  .col-sm-2 {
    width: 16.66%;
  }
  .col-sm-3 {
    width: 25%;
  }
  .col-sm-4 {
    width: 33.33%;
  }
  .col-sm-5 {
    width: 41.66%;
  }
  .col-sm-6 {
    width: 50%;
  }
  .col-sm-7 {
    width: 58.33%;
  }
  .col-sm-8 {
    width: 66.66%;
  }
  .col-sm-9 {
    width: 74.99%;
  }
  .col-sm-10 {
    width: 83.33%;
  }
  .col-sm-11 {
    width: 91.66%;
  }
  .col-sm-12 {
    width: 100%;
  }
}

